# zarr-datafusion-search-examples

./: README.md  pyproject.toml
notebooks/: Landsat9.ipynb  manifest_store.ipynb  rasterix_example.ipynb
notebooks/.ipynb_checkpoints/: HLS-checkpoint.ipynb  Landsat9-checkpoint.ipynb
