[project]
name = "zarr-datafusion-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.61",
    "earthaccess>=0.15.1",
    "icechunk>=1.1.11",
    "planetary-computer>=1.0.0",
    "pystac>=1.14.1",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "rich>=14.2.0",
    "shapely>=2.1.2",
    "virtual-tiff>=0.2.0",
    "virtualizarr",
    "xarray>=2025.10.1",
]

[tool.uv.sources]
virtualizarr = { git = "https://github.com/zarr-developers/VirtualiZarr" }
