[project]
name = "zarr-datafusion-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "boto3>=1.40.61",
    "dask>=2025.11.0",
    "earthaccess>=0.15.1",
    #"icechunk>=1.1.11",
    "icechunk @ file:///Users/seanharkins/projects/icechunk/target/wheels/icechunk-1.1.12-cp313-cp313-macosx_11_0_arm64.whl",
    "matplotlib>=3.10.7",
    "morecantile>=6.2.0",
    "planetary-computer>=1.0.0",
    "pyresample>=1.34.2",
    "pystac>=1.14.1",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "rasterix>=0.1a4",
    "rich>=14.2.0",
    "shapely>=2.1.2",
    "virtual-tiff>=0.2.0",
    "virtualizarr",
    "xarray>=2025.10.1",
    "zarr-datafusion-search @ file:///Users/seanharkins/projects/zarr-datafusion-internal/python/target/wheels/zarr_datafusion_search-0.1.0-cp39-abi3-macosx_11_0_arm64.whl",
]

[tool.uv.sources]
virtualizarr = { git = "https://github.com/zarr-developers/VirtualiZarr" }
